added loacl storage to store search city names, code cleanup, added init function to display the search inout and history items , clear history functionality to clear the stored items in local storage

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,15 +15,15 @@
     font-size: 30px;
     font-style: bold;
 }
-.card-body .button {
+/* .card-body .button {
     background-color:var(--secondary);
     border-radius: var(--border-radius);
     border: 2px solid var([--primary]);
-} */
+} 
 
 .card-body button:hover {
   background: #0b7dda;
-}
+} */
 
 .card{
   margin: 10px;
